use modern java base64